--- a/render/package.json
+++ b/render/package.json
@@ -5,18 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server src/templates/ -c 0"
+    "start": "http-server src/templates/ -c-1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@turf/turf": "^6.5.0",
+    "@types/lodash": "^4.14.186",
     "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
     "fast-xml-parser": "^4.0.11",
+    "lodash": "^4.17.21",
     "posthtml": "^0.16.6",
     "posthtml-inline-assets": "^3.1.0",
     "puppeteer": "^19.2.0",
     "puppeteer-core": "^19.2.0",
+    "sunrise-sunset-js": "^2.2.1",
     "typescript": "^4.8.4",
     "yargs": "^17.6.0"
   },
