--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # Custom
 
 .DS_Store
+# exclude everything
+logs/*
+# exception to the rule
+!logs/.gitkeep
 
-# Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
