--- a/render/package.json
+++ b/render/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "http-server src/templates/ -c-1",
+    "build": "tsc && cp -r src/templates/ dist/",
     "render": "./src/index.ts --lat 60.222 --lon 24.83 --timezone Europe/Helsinki --locationName Espoo --batteryLevel 100 > src/templates/render.html"
   },
   "author": "",
