--- a/render/tsconfig.json
+++ b/render/tsconfig.json
@@ -6,6 +6,7 @@
     }
   },
   "compilerOptions": {
+    "outDir": "./dist",
     "target": "es2016",
     "lib": [
       "dom",
@@ -23,7 +24,6 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
@@ -36,6 +36,6 @@
     },
   },
   "include": [
-    "src"
+    "src/**/*"
   ]
 }
