--- a/render/package.json
+++ b/render/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "http-server src/templates/ -c-1",
     "build": "tsc && cp -r src/templates/ dist/",
-    "render": "./src/index.ts --lat 60.222 --lon 24.83 --timezone Europe/Helsinki --locationName Espoo --batteryLevel 100 > src/templates/render.html"
+    "render": "./src/cli.ts --lat 60.222 --lon 24.83 --timezone Europe/Helsinki --locationName Espoo --batteryLevel 100 > src/templates/render.html"
   },
   "author": "",
   "license": "ISC",
@@ -22,11 +22,14 @@
     "puppeteer": "^19.2.0",
     "puppeteer-core": "^19.2.0",
     "sunrise-sunset-js": "^2.2.1",
+    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4",
     "yargs": "^17.6.0"
   },
   "devDependencies": {
+    "@google-cloud/functions-framework": "^3.1.2",
     "@types/axios": "^0.14.0",
+    "@types/express": "^4.17.14",
     "@types/node": "^18.11.8",
     "@types/yargs": "^17.0.13",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
