Fix npm test command

--- a/render/package.json
+++ b/render/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "echo 'pass, lol'",
     "start": "http-server src/templates/ -c-1",
     "build": "tsc && cp -r src/templates/ dist/",
     "render": "./src/cli.ts --lat 60.222 --lon 24.83 --timezone Europe/Helsinki --locationName Espoo --batteryLevel 100 > src/templates/render.html"
