Try to fix cloud function deploy

--- a/render/package.json
+++ b/render/package.json
@@ -2,6 +2,7 @@
   "name": "render",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo 'pass, lol'",
