--- a/render/package.json
+++ b/render/package.json
@@ -2,17 +2,18 @@
   "name": "render",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo 'pass, lol'",
     "start": "http-server src/templates/ -c-1",
-    "build": "tsc && cp -r src/templates/ dist/",
+    "function": "npm run build && functions-framework --source=dist/",
+    "build": "ttsc && cp -r src/templates dist/templates",
     "render": "./src/cli.ts --lat 60.222 --lon 24.83 --timezone Europe/Helsinki --locationName Espoo --batteryLevel 100 > src/templates/render.html"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^6.6.0",
     "@turf/turf": "^6.5.0",
     "@types/lodash": "^4.14.186",
     "axios": "^1.1.3",
@@ -24,7 +25,6 @@
     "puppeteer": "^19.2.0",
     "puppeteer-core": "^19.2.0",
     "sunrise-sunset-js": "^2.2.1",
-    "tsconfig-paths": "^4.1.0",
     "typescript": "^4.8.4",
     "yargs": "^17.6.0"
   },
@@ -35,10 +35,12 @@
     "@types/node": "^18.11.8",
     "@types/yargs": "^17.0.13",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@zerollup/ts-transform-paths": "^1.7.18",
     "eslint": "^8.26.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "http-server": "^14.1.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "ttypescript": "^1.5.13"
   }
 }
