--- a/render/tsconfig.json
+++ b/render/tsconfig.json
@@ -7,7 +7,8 @@
   },
   "compilerOptions": {
     "outDir": "./dist",
-    "target": "es2016",
+    "target": "es2018",
+    "module": "commonjs",
     "lib": [
       "dom",
       "dom.iterable",
@@ -20,7 +21,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -34,6 +34,14 @@
         "src/libTypes/*"
       ]
     },
+    "plugins": [
+      {
+        "transform": "@zerollup/ts-transform-paths",
+        "exclude": [
+          "*"
+        ]
+      }
+    ]
   },
   "include": [
     "src/**/*"
