Limit deploy to 1

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,6 +75,7 @@ jobs:
     name: Deploy
     needs: ["build"]
     runs-on: ubuntu-latest
+    concurrency: cloud-function-deploy
     permissions:
       id-token: write
       contents: read
