Inline fonts (this took long...)

--- a/render/package.json
+++ b/render/package.json
@@ -21,6 +21,9 @@
     "date-fns": "^2.29.3",
     "fast-xml-parser": "^4.0.11",
     "lodash": "^4.17.21",
+    "mime-types": "^2.1.35",
+    "postcss": "^8.4.18",
+    "postcss-url": "^10.1.3",
     "posthtml": "^0.16.6",
     "posthtml-inline-assets": "^3.1.0",
     "puppeteer": "^18.2.1",
@@ -33,7 +36,9 @@
     "@google-cloud/functions-framework": "^3.1.2",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.14",
+    "@types/mime-types": "^2.1.1",
     "@types/node": "^18.11.8",
+    "@types/postcss-url": "^10.0.0",
     "@types/yargs": "^17.0.13",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
     "@zerollup/ts-transform-paths": "^1.7.18",
