--- a/render/package.json
+++ b/render/package.json
@@ -19,6 +19,8 @@
     "@types/lodash": "^4.14.186",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
+    "date-fns-tz": "^1.3.7",
+    "dotenv": "^16.0.3",
     "fast-xml-parser": "^4.0.11",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
