--- a/render/package.json
+++ b/render/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo 'pass, lol'",
+    "test": "jest",
     "start": "http-server src/templates/ -c-1",
     "clean": "rm -r dist/",
     "build": "ttsc && cp -r src/templates dist/templates && cp package.json package-lock.json tsconfig.json dist/",
@@ -38,6 +38,7 @@
     "@google-cloud/functions-framework": "^3.1.2",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.2",
     "@types/mime-types": "^2.1.1",
     "@types/node": "^18.11.8",
     "@types/postcss-url": "^10.0.0",
@@ -50,7 +51,9 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "http-server": "^14.1.1",
+    "jest": "^29.2.2",
     "sharp": "^0.31.2",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "ttypescript": "^1.5.13"
   }
