--- a/render/tsconfig.json
+++ b/render/tsconfig.json
@@ -12,7 +12,7 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext",
+      "esnext"
     ],
     "allowJs": true,
     "skipLibCheck": true,
