--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # Ignore generated credentials from google-github-actions/auth
 gha-creds-*.json
+gcloud-key.json
 
 render/src/templates/render.html
 render/src/templates/random.html
