--- a/rasp/.env.example
+++ b/rasp/.env.example
@@ -1,2 +1,8 @@
-# Dimensions should be 1872x1404
+# Dimensions for 10.3" e-Ink display
 RENDER_URL='https://via.placeholder.com/1872x1404.png'
+RENDER_API_KEY='<key>'
+RENDER_LATITUDE=60.41
+RENDER_LONGITUDE=24.12
+RENDER_LOCATION_NAME=Helsinki
+RENDER_TIMEZONE='Europe/Helsinki'
+GOOGLE_APPLICATION_CREDENTIALS=/home/pi/eink-weather-display/rasp/gcloud-key.json
