--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,9 @@
       "source.fixAll.eslint"
     ]
   },
+  "[c]": {
+    "editor.formatOnSave": false
+  },
   "files.trimTrailingWhitespace": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
