--- a/rasp/Pipfile
+++ b/rasp/Pipfile
@@ -4,7 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+google-cloud-logging = "*"
 requests = "*"
+pillow = "==9.3.0"
+"rpi.gpio" = "*"
 
 [dev-packages]
 
