--- a/rasp/usb-it8951/CMakeLists.txt
+++ b/rasp/usb-it8951/CMakeLists.txt
@@ -5,3 +5,6 @@ set(CMAKE_C_STANDARD 99)
 
 add_executable(it8951 main.c)
 install(TARGETS it8951 DESTINATION bin)
+
+add_executable(vcom-it8951 getvcom.c)
+install(TARGETS vcom-it8951 DESTINATION bin)
