Add precipitation histograms and temp dots to short term forecast

--- a/render/.eslintrc.json
+++ b/render/.eslintrc.json
@@ -31,7 +31,8 @@
       }
     ],
     "no-loop-func": "off",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-non-null-assertion": "off"
   },
   "ignorePatterns": [
     "**/*.js"
