--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,6 +65,7 @@ jobs:
           FILE_NAME: weather-display-${{ steps.timestamp.outputs.timestamp }}-${{ env.GITHUB_SHA }}.zip
         run: |
           cd dist/
+          rm tsconfig.json
           zip -r ../$FILE_NAME .
           cd ..
           gcloud storage cp $FILE_NAME gs://$GCP_BUCKET
