--- a/render/package.json
+++ b/render/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "start": "http-server src/templates/ -c-1",
     "clean": "rm -r dist/",
-    "build": "if [[ \"$CI\" == \"true\" ]]; then ttsc && rm -r dist/templates/ && cp -r src/templates dist/templates && cp package.json package-lock.json tsconfig.json dist/; fi",
+    "build": "if [ \"$CI\" == \"true\" ]; then ttsc && rm -r dist/templates/ && cp -r src/templates dist/templates && cp package.json package-lock.json tsconfig.json dist/; fi",
     "render": "./src/entrypoints/cli.ts --lat 60.222 --lon 24.83 --timezone Europe/Helsinki --locationName Espoo --batteryLevel 100 --width 1852 --height 1314 --paddingTop 70 --paddingRight 10 --paddingBottom 20 --paddingLeft 10",
     "random": "./src/entrypoints/cli.ts --random --lat 60.222 --lon 24.83 --timezone Europe/Helsinki --locationName Espoo --batteryLevel 100"
   },
